components/test-app/overlays/ph/istio-enabled-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smoke
  labels:
    istio-injection: enabled
